# trader-task

./: .gitignore  Dockerfile  docer-compose.yaml  docker-compose.yaml  pyproject.toml
src/: main.py  replay_test.py
src/core/: config.py
src/trade/: __init__.py  buffer.py  data_ws.py  execution.py  htf_cache.py  indicators.py  stategy.py  trailing.py  utils.py
