[project]
name = "bybit-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Krushovice",email = "kickstar69@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt (>=4.4.95,<5.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "ta (>=0.11.0,<0.12.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
