[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
    python = "^3.13"
    ccxt = "^4.4.95"
    aiohttp = "^3.12.14"
    pandas =  "^2.3.1"
    ta = "^0.11.0"
    pydantic = "^2.11.7"
    pydantic-settings = "^2.10.1"
    pytest = "^8.4.1"
    black = "^25.1.0"
    pre-commit = "^4.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
